<resources>
    <string name="app_name">GoiMon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtTenDangNhap">Tên đăng nhập</string>
    <string name="txtMatKhau">Mật khẩu</string>
    <string name="edtTenDangNhap">Nhập tên đăng nhập</string>
    <string name="edtMatKhau">Nhập mật khẩu</string>
    <string name="btnDangNhap">Đăng nhập</string>
</resources>